--- a/hw/ADC_test.srcs/sources_1/bd/adc_interface/ui/bd_b2989efa.ui
+++ b/hw/ADC_test.srcs/sources_1/bd/adc_interface/ui/bd_b2989efa.ui
@@ -1,42 +1,44 @@
 {
    "ActiveEmotionalView":"Default View",
-   "Default View_ScaleFactor":"2.17638",
-   "Default View_TopLeft":"-215,58",
+   "Default View_ScaleFactor":"1.13662",
+   "Default View_TopLeft":"-508,-156",
    "ExpandedHierarchyInLayout":"",
-   "guistr":"# # String gsaved with Nlview 7.0r6  2020-01-29 bk=1.5227 VDI=41 GEI=36 GUI=JA:10.0 non-TLS
+   "guistr":"# # String gsaved with Nlview 7.0r6  2020-01-29 bk=1.5227 VDI=41 GEI=36 GUI=JA:10.0 non-TLS-threadsafe
 #  -string -flagsOSRD
-preplace port DDR -pg 1 -lvl 4 -x 1190 -y 630 -defaultsOSRD
-preplace port FIXED_IO -pg 1 -lvl 4 -x 1190 -y 660 -defaultsOSRD
-preplace port port-id_XADC_V_P -pg 1 -lvl 0 -x -100 -y 170 -defaultsOSRD
-preplace port port-id_XADC_V_N -pg 1 -lvl 0 -x -100 -y 140 -defaultsOSRD
-preplace portBus led -pg 1 -lvl 4 -x 1190 -y 770 -defaultsOSRD
-preplace inst axi_smc -pg 1 -lvl 2 -x 610 -y 780 -defaultsOSRD
-preplace inst processing_system7_0 -pg 1 -lvl 1 -x 140 -y 770 -defaultsOSRD
-preplace inst rst_ps7_0_100M -pg 1 -lvl 1 -x 140 -y 550 -defaultsOSRD
-preplace inst xadc_wiz_0 -pg 1 -lvl 1 -x 140 -y 220 -defaultsOSRD
-preplace inst axi_registers -pg 1 -lvl 3 -x 1020 -y 770 -defaultsOSRD
-preplace inst daq_0 -pg 1 -lvl 2 -x 610 -y 470 -defaultsOSRD
-preplace netloc XADC_V_N_1 1 0 1 -70J 140n
-preplace netloc XADC_V_P_1 1 0 1 -80J 170n
-preplace netloc axi_registers_0_led 1 3 1 NJ 770
-preplace netloc daq_0_data_adc_out 1 2 1 850 460n
-preplace netloc daq_0_data_status_reg 1 2 1 860 440n
-preplace netloc daq_0_ready_out 1 2 1 800 480n
-preplace netloc daq_0_s_axis_tready 1 1 1 380 180n
-preplace netloc daq_0_valid_out 1 2 1 790 500n
-preplace netloc processing_system7_0_FCLK_CLK0 1 0 3 -80 440 350 690 810
-preplace netloc processing_system7_0_FCLK_RESET0_N 1 0 2 -70 450 330
-preplace netloc rst_ps7_0_100M_peripheral_aresetn 1 0 3 -70 380 360 680 820
-preplace netloc xadc_wiz_0_eoc_out 1 1 2 NJ 260 830
-preplace netloc xadc_wiz_0_m_axis_tdata 1 1 1 400 140n
-preplace netloc xadc_wiz_0_m_axis_tid 1 1 1 390 160n
-preplace netloc xadc_wiz_0_m_axis_tvalid 1 1 1 370 200n
-preplace netloc axi_smc_M00_AXI 1 2 1 840 700n
-preplace netloc processing_system7_0_DDR 1 1 3 370J 630 NJ 630 NJ
-preplace netloc processing_system7_0_FIXED_IO 1 1 3 390J 640 NJ 640 1160J
-preplace netloc processing_system7_0_M_AXI_GP0 1 1 1 340 760n
-levelinfo -pg 1 -100 140 610 1020 1190
-pagesize -pg 1 -db -bbox -sgen -220 0 1300 1650
+preplace port DDR -pg 1 -lvl 5 -x 1690 -y 460 -defaultsOSRD
+preplace port FIXED_IO -pg 1 -lvl 5 -x 1690 -y 490 -defaultsOSRD
+preplace port port-id_XADC_V_P -pg 1 -lvl 0 -x 0 -y 230 -defaultsOSRD
+preplace port port-id_XADC_V_N -pg 1 -lvl 0 -x 0 -y 200 -defaultsOSRD
+preplace portBus led -pg 1 -lvl 5 -x 1690 -y 300 -defaultsOSRD
+preplace inst axi_smc -pg 1 -lvl 3 -x 1030 -y 380 -defaultsOSRD
+preplace inst processing_system7_0 -pg 1 -lvl 2 -x 580 -y 520 -defaultsOSRD
+preplace inst rst_ps7_0_100M -pg 1 -lvl 1 -x 190 -y 360 -defaultsOSRD
+preplace inst xadc_wiz_0 -pg 1 -lvl 2 -x 580 -y 240 -defaultsOSRD
+preplace inst axi_registers -pg 1 -lvl 4 -x 1480 -y 290 -defaultsOSRD
+preplace inst daq_0 -pg 1 -lvl 3 -x 1030 -y 130 -defaultsOSRD
+preplace netloc XADC_V_N_1 1 0 2 NJ 200 370J
+preplace netloc XADC_V_P_1 1 0 2 NJ 230 NJ
+preplace netloc axi_registers_0_led 1 4 1 NJ 300
+preplace netloc axi_registers_daq_control_reg 1 2 3 830 260 1230J 150 1670
+preplace netloc daq_0_daq_adc_out 1 3 1 1280 110n
+preplace netloc daq_0_daq_status_reg 1 3 1 1290 90n
+preplace netloc daq_0_ready_out 1 3 1 1250 130n
+preplace netloc daq_0_s_axis_tready 1 2 1 820 140n
+preplace netloc daq_0_valid_out 1 3 1 1210 150n
+preplace netloc processing_system7_0_FCLK_CLK0 1 0 4 20 260 380 70 800 270 1260
+preplace netloc processing_system7_0_FCLK_RESET0_N 1 0 3 20 460 390J 410 770
+preplace netloc rst_ps7_0_100M_peripheral_aresetn 1 1 3 360 80 770 280 1270J
+preplace netloc xadc_wiz_0_m_axis_tdata 1 2 1 790 100n
+preplace netloc xadc_wiz_0_m_axis_tid 1 2 1 780 80n
+preplace netloc xadc_wiz_0_m_axis_tvalid 1 2 1 810 120n
+preplace netloc daq_0_fifo_data_reg 1 3 1 1240 170n
+preplace netloc xadc_wiz_0_busy_out 1 2 2 780 480 1260J
+preplace netloc axi_smc_M00_AXI 1 3 1 1220 210n
+preplace netloc processing_system7_0_DDR 1 2 3 NJ 470 NJ 470 1670J
+preplace netloc processing_system7_0_FIXED_IO 1 2 3 NJ 490 NJ 490 NJ
+preplace netloc processing_system7_0_M_AXI_GP0 1 2 1 820 360n
+levelinfo -pg 1 0 190 580 1030 1480 1690
+pagesize -pg 1 -db -bbox -sgen -120 0 1800 650
 "
 }
 {
